@@ -104,7 +104,7 @@ int main(int argc, char *argv[]) {
       	    if (*++argv[0] == '\0') {
       	       argc--; argv++;
       	    }
-      	    if (argv[0] == '\0') goto invalid;
+      	    if (argv[0] == NULL) goto invalid;
 	    DPI = atof(argv[0]);
 	    done = 1;
       	    break;
@@ -115,8 +115,9 @@ invalid:
       }
 
    if (argc < 1) {
-      msg  ("mag (ps2pk) version " PACKAGE_VERSION "\n");
-      fatal("Usage: %s [-r] [-Rdpi] size . . .\n", myname);
+      msg  ("mag (ps2pk) version " PACKAGE_VERSION " (" TL_VERSION ")\n");
+      msg  ("Usage: %s [-r] [-Rdpi] size . . .\n", myname);
+      fatal("\nEmail bug reports to %s.\n", PACKAGE_BUGREPORT);
    }
    
 #ifdef WIN32
